--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,6 +30,11 @@ jobs:
          npm install -g newman
          npm install -g newman-reporter-htmlextra
          
+      - name: Start applicatie
+        run: nohup mvn spring-boot:run > /dev/null 2>&1 &
+      - name: ff wachten
+        run: sleep 10
+         
       - name: Run Postman collections
         run: newman run src/test/Game.postman_collection.json
          
