--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,8 +35,12 @@ jobs:
       - name: ff wachten
         run: sleep 10
          
-      - name: Run Postman collections
+      - name: Run Postman collections game
         run: newman run src/test/Game.postman_collection.json
+      - name: Run Postman collections rider
+        run: newman run src/test/Rider.postman_collection.json
+      - name: Run Postman collections enrollment
+        run: newman run src/test/Enrollment.postman_collection.json
          
          
         
