--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,12 +35,11 @@ jobs:
       - name: Wait 10 seconds so the application is ready
         run: sleep 10
          
-      - name: API Testen
-      - name: Run Postman collections game
+      - name: Run Postman API collections game
         run: newman run src/test/Game.postman_collection.json
-      - name: Run Postman collections rider
+      - name: Run Postman API collections rider
         run: newman run src/test/Rider.postman_collection.json
-      - name: Run Postman collections enrollment
+      - name: Run Postman API collections enrollment
         run: newman run src/test/Enrollment.postman_collection.json
          
          
