--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,6 +17,10 @@ jobs:
       - name: Create the JAR file with Maven
         run: mvn package -DskipTests
         
+        #Run static code analyses
+      - name: Run Codacy Analysis CLI
+        uses: codacy/codacy-analysis-cli-action@mast
+        
         #Run Unit tests
       - name: Run Unit Test
         run: mvn test -Dgroups="UnitTest"
