--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,6 +46,25 @@ jobs:
         run: newman run src/test/Combination.postman_collection.json
       - name: Run Postman API collections enrollment
         run: newman run src/test/Enrollment.postman_collection.json
+        
+      - name: Install Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        
+      - name: Login to Dockerhub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+            context: .
+            push: true
+            tags: Merel2002/equigame:latestversion
+
+      - name: Log out from Dockerhub
+        run: docker logout https://hub.docker.com/
          
          
         
