--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -61,7 +61,7 @@ jobs:
         with:
             context: .
             push: true
-            tags: Merel2002/equigame:latestversion
+            tags: merel2002/equigame:latestversion
 
       - name: Log out from Dockerhub
         run: docker logout https://hub.docker.com/
