--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,6 +46,12 @@ jobs:
         run: newman run src/test/Combination.postman_collection.json
       - name: Run Postman API collections enrollment
         run: newman run src/test/Enrollment.postman_collection.json
+        
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Install Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -65,10 +71,7 @@ jobs:
 
       - name: Log out from Dockerhub
         run: docker logout https://hub.docker.com/
-
-
-
-         
+            
          
         
         
