--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Oefen project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>merel2002</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,6 +50,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>2.1.214</version>
+		</dependency>
+		<dependency>
+			<groupId>org.sonarsource.scanner.maven</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>3.9.1.2184</version>
 		</dependency>
     </dependencies>
 
